--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,7 +4,7 @@ django-environ~=0.8.1
 django-celery-beat==2.5.0
 django-celery-results==2.5.0
 django-dotenv==1.4.2
-django_model_utils-4.3.1
+django_model_utils==4.3.1
 
 # Scrapy
 Scrapy==2.8.0
