--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,8 +6,12 @@ django-celery-results==2.5.0
 django-dotenv==1.4.2
 django_model_utils==4.3.1
 
+# Celery
+celery==5.2.7
+
 # Scrapy
 Scrapy==2.8.0
 scrapy-djangoitem==1.1.1
 
 gunicorn==20.1.0
+redis==3.5.3
