--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,8 +48,8 @@ jobs:
       
       - name: install dependencies
         run: |
-          apt-get update
-          apt-get install -y build-essential curl libpq-dev --no-install-recommends
+          sudo apt-get update
+          sudo apt-get install -y build-essential curl libpq-dev --no-install-recommends
           python -m pip install --U pip
           pip install -r api/requirements.txt
       
