--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,7 +50,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential curl libpq-dev --no-install-recommends
-          python -m pip install --U pip
+          python -m pip install -U pip
           pip install -r api/requirements.txt
       
       - name: Migrate
