--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
 
       DJANGO_DEBUG: True
       DJANGO_SECRET_KEY: some-secret-key
-      DJANGO_ALLOWED_HOSTS: 'localhost,kicksams.com'
+      DJANGO_ALLOWED_HOSTS: "localhost,kicksams.com"
 
       CELERY_LOG_LEVEL: info
 
@@ -45,21 +45,24 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      
-      - name: install dependencies
+      - name: Update apps
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential curl libpq-dev --no-install-recommends
+
+      - name: Install dependencies
           python -m pip install -U pip
-          pip install -r api/requirements.txt
-      
-      - name: Migrate
+          pip install -r requirements.txt
+
+      -name: CD into api
         run: |
           cd api
+
+      - name: Migrate
+        run: |
           python manage.py makemigrations
           python manage.py migrate
+          
       - name: Test
         run: |
           python manage.py test
-
-
