--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -57,6 +57,7 @@ jobs:
           cd api
           
       - name: Install dependencies
+        run: |
           python -m pip install -U pip
           pip install -r requirements.txt
 
