--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,15 +54,19 @@ jobs:
       
       - name: CD into api
         run: |
+          pwd
           cd api
           
       - name: Install dependencies
         run: |
+          pwd
+          cd api
           python -m pip install -U pip
           pip install -r requirements.txt
 
       - name: Migrate
         run: |
+          pwd
           python manage.py makemigrations
           python manage.py migrate
 
